tools/architecture/validate-source-imports/tests/fixtures/invalid/domain-imports-graphql/src/index.ts
import { gql } from "graphql";
export const packageName = "@platform/domain-core";
